--- a/css/reponsive.css
+++ b/css/reponsive.css
@@ -101,6 +101,9 @@
         overflow: auto;
         overflow-x: hidden;
     }
+    .about .info-list ul {
+        padding: 0 0 0 25px;
+    }
     .contact .grid {
         padding-right: 10px;
     }
@@ -114,6 +117,9 @@
 }
 
 @media (min-width:768px) and (max-width:1023px) {
+    .indicator {
+        display: none;
+    }
     .mg-bt {
         padding-bottom: 100px;
     }
@@ -121,6 +127,18 @@
         display: block;
         z-index: 1;
         width: 100%;
+    }
+    .top-menu_mobile ul li.active::before {
+        content: "";
+        background: var(--text-theme);
+        width: 60px;
+        height: 60px;
+        position: absolute;
+        top: -25px;
+        left: auto;
+        border-radius: 50%;
+        border: 4px solid #000;
+        margin: 0 -21px;
     }
     #page {
         width: 100%;
@@ -185,6 +203,9 @@
     .contact .grid {
         margin-top: 10px;
     }
+    .about .info-list ul {
+        padding: 0 0 0 25px;
+    }
 }
 
 @media (min-width:576px) and (max-width: 767px) {
@@ -195,6 +216,21 @@
         display: block;
         z-index: 1;
         height: 70px;
+    }
+    .indicator {
+        display: none;
+    }
+    .top-menu_mobile ul li.active::before {
+        content: "";
+        background: var(--text-theme);
+        width: 60px;
+        height: 60px;
+        position: absolute;
+        top: -25px;
+        left: auto;
+        border-radius: 50%;
+        border: 4px solid #000;
+        margin: 0 -21px;
     }
     #page {
         width: 100%;
@@ -262,52 +298,8 @@
     .about .grid {
         margin-top: 10px;
     }
-    .indicator {
-        width: 70px;
-        top: -45%;
-        height: 70px;
-    }
-    .top-menu_mobile ul li:nth-child(1).active~.indicator {
-        transform: translateX(calc(120 * 0.15px));
-        -webkit-transform: translateX(calc(120 * 0.15px));
-        -moz-transform: translateX(calc(120 * 0.15px));
-        -ms-transform: translateX(calc(120 * 0.15px));
-        -o-transform: translateX(calc(120 * 0.15px));
-    }
-    .top-menu_mobile ul li:nth-child(2).active~.indicator {
-        transform: translateX(calc(120*0.89px));
-        -webkit-transform: translateX(calc(120*0.89px));
-        -moz-transform: translateX(calc(120*0.89px));
-        -ms-transform: translateX(calc(120*0.89px));
-        -o-transform: translateX(calc(120*0.89px));
-    }
-    .top-menu_mobile ul li:nth-child(3).active~.indicator {
-        transform: translateX(calc(120*1.63px));
-        -webkit-transform: translateX(calc(120*1.63px));
-        -moz-transform: translateX(calc(120*1.63px));
-        -ms-transform: translateX(calc(120*1.63px));
-        -o-transform: translateX(calc(120*1.63px));
-    }
-    .top-menu_mobile ul li:nth-child(4).active~.indicator {
-        transform: translateX(calc(120 *2.37px));
-        -webkit-transform: translateX(calc(120 *2.37px));
-        -moz-transform: translateX(calc(120 *2.37px));
-        -ms-transform: translateX(calc(120 *2.37px));
-        -o-transform: translateX(calc(120 *2.37px));
-    }
-    .top-menu_mobile ul li:nth-child(5).active~.indicator {
-        transform: translateX(calc(120*3.11px));
-        -webkit-transform: translateX(calc(120*3.11px));
-        -moz-transform: translateX(calc(120*3.11px));
-        -ms-transform: translateX(calc(120*3.11px));
-        -o-transform: translateX(calc(120*3.11px));
-    }
-    .top-menu_mobile ul li:nth-child(6).active~.indicator {
-        transform: translateX(calc(116*4px));
-        -webkit-transform: translateX(calc(116*4px));
-        -moz-transform: translateX(calc(116*4px));
-        -ms-transform: translateX(calc(116*4px));
-        -o-transform: translateX(calc(116*4px));
+    .about .info-list ul {
+        padding: 0 0 0 25px;
     }
 }
 
@@ -378,6 +370,9 @@
     .contact .grid {
         margin-top: 10px;
     }
+    .about .info-list ul {
+        padding: 0 0 0 25px;
+    }
     .about .grid {
         margin-top: 10px;
     }
@@ -389,13 +384,28 @@
     .top-menu_mobile ul {
         padding: 0 10px 0 0;
     }
+    .indicator {
+        display: none;
+    }
+    .top-menu_mobile ul li.active::before {
+        content: "";
+        background: var(--text-theme);
+        width: 60px;
+        height: 60px;
+        position: absolute;
+        top: -25px;
+        left: auto;
+        border-radius: 50%;
+        border: 4px solid #000;
+        margin: 0 -25px;
+    }
     .top-menu_mobile ul li.active a .icon {
         font-size: 25px;
-        transform: translate(5px, -25px);
-        -webkit-transform: translate(5px, -25px);
-        -moz-transform: translate(5px, -25px);
-        -ms-transform: translate(5px, -25px);
-        -o-transform: translate(5px, -25px);
+        transform: translate(5px, -20px);
+        -webkit-transform: translate(5px, -20px);
+        -moz-transform: translate(5px, -20px);
+        -ms-transform: translate(5px, -20px);
+        -o-transform: translate(5px, -20px);
     }
     .top-menu_mobile ul li.active a .link {
         font-size: 14px;
@@ -404,60 +414,6 @@
         -moz-transform: translate(5px, 10px);
         -ms-transform: translate(5px, 10px);
         -o-transform: translate(5px, 10px);
-    }
-    .indicator {
-        width: 65px;
-        top: -45%;
-        height: 65px;
-    }
-    .top-menu_mobile ul li:nth-child(1).active~.indicator {
-        transform: translateX(-20%);
-        -webkit-transform: translateX(-20%);
-        -moz-transform: translateX(-20%);
-        -ms-transform: translateX(-20%);
-        -o-transform: translateX(-20%);
-    }
-    .top-menu_mobile ul li:nth-child(2).active~.indicator {
-        transform: translateX(79%);
-        -webkit-transform: translateX(79%);
-        -moz-transform: translateX(79%);
-        -ms-transform: translateX(79%);
-        -o-transform: translateX(79%);
-    }
-    .top-menu_mobile ul li:nth-child(3).active~.indicator {
-        transform: translateX(182%);
-        -webkit-transform: translateX(182%);
-        -moz-transform: translateX(182%);
-        -ms-transform: translateX(182%);
-        -o-transform: translateX(182%);
-    }
-    .top-menu_mobile ul li:nth-child(3).active a .link {
-        transform: translate(-5px, 10px);
-        -webkit-transform: translate(-5px, 10px);
-        -moz-transform: translate(-5px, 10px);
-        -ms-transform: translate(-5px, 10px);
-        -o-transform: translate(-5px, 10px);
-    }
-    .top-menu_mobile ul li:nth-child(4).active~.indicator {
-        transform: translateX(285%);
-        -webkit-transform: translateX(285%);
-        -moz-transform: translateX(285%);
-        -ms-transform: translateX(285%);
-        -o-transform: translateX(285%);
-    }
-    .top-menu_mobile ul li:nth-child(5).active~.indicator {
-        transform: translateX(385%);
-        -webkit-transform: translateX(385%);
-        -moz-transform: translateX(385%);
-        -ms-transform: translateX(385%);
-        -o-transform: translateX(385%);
-    }
-    .top-menu_mobile ul li:nth-child(6).active~.indicator {
-        transform: translateX(489%);
-        -webkit-transform: translateX(489%);
-        -moz-transform: translateX(489%);
-        -ms-transform: translateX(489%);
-        -o-transform: translateX(489%);
     }
 }
 
@@ -556,57 +512,18 @@
         -o-transform: translate(5px, 10px);
     }
     .indicator {
-        width: 65px;
-        top: -45%;
-        height: 65px;
+        display: none;
     }
-    .top-menu_mobile ul li:nth-child(1).active~.indicator {
-        transform: translateX(-17px);
-        -webkit-transform: translateX(-17px);
-        -moz-transform: translateX(-17px);
-        -ms-transform: translateX(-17px);
-        -o-transform: translateX(-17px);
-    }
-    .top-menu_mobile ul li:nth-child(2).active~.indicator {
-        transform: translateX(42px);
-        -webkit-transform: translateX(42px);
-        -moz-transform: translateX(42px);
-        -ms-transform: translateX(42px);
-        -o-transform: translateX(42px);
-    }
-    .top-menu_mobile ul li:nth-child(3).active~.indicator {
-        transform: translateX(102px);
-        -webkit-transform: translateX(102px);
-        -moz-transform: translateX(102px);
-        -ms-transform: translateX(102px);
-        -o-transform: translateX(102px);
-    }
-    .top-menu_mobile ul li:nth-child(3).active a .link {
-        transform: translate(-5px, 10px);
-        -webkit-transform: translate(-5px, 10px);
-        -moz-transform: translate(-5px, 10px);
-        -ms-transform: translate(-5px, 10px);
-        -o-transform: translate(-5px, 10px);
-    }
-    .top-menu_mobile ul li:nth-child(4).active~.indicator {
-        transform: translateX(162px);
-        -webkit-transform: translateX(162px);
-        -moz-transform: translateX(162px);
-        -ms-transform: translateX(162px);
-        -o-transform: translateX(162px);
-    }
-    .top-menu_mobile ul li:nth-child(5).active~.indicator {
-        transform: translateX(222px);
-        -webkit-transform: translateX(222px);
-        -moz-transform: translateX(222px);
-        -ms-transform: translateX(222px);
-        -o-transform: translateX(222px);
-    }
-    .top-menu_mobile ul li:nth-child(6).active~.indicator {
-        transform: translateX(283px);
-        -webkit-transform: translateX(283px);
-        -moz-transform: translateX(283px);
-        -ms-transform: translateX(283px);
-        -o-transform: translateX(283px);
+    .top-menu_mobile ul li.active::before {
+        content: "";
+        background: var(--text-theme);
+        width: 60px;
+        height: 60px;
+        position: absolute;
+        top: -25px;
+        left: auto;
+        border-radius: 50%;
+        border: 4px solid #000;
+        margin: -2px -25px;
     }
 }
