--- a/css/basic.css
+++ b/css/basic.css
@@ -1118,6 +1118,10 @@ body {
     list-style-type: disc;
 }
 
+.item-content img {
+    height: 170px;
+}
+
 .contact .grid {
     margin-top: 10px;
 }
