--- a/css/basic.css
+++ b/css/basic.css
@@ -1060,6 +1060,15 @@ body {
     padding: 0 30px 0 0;
 }
 
+.list-coding .name{
+    color: var(--text-black-theme);
+    margin-left: 10px;
+    font-size: 14px;
+}
+.list-coding .name .bx{
+    color: var(--text-theme);
+    font-size: 18px;
+}
 .skills .process {
     width: 100%;
     height: 4px;
