--- a/css/basic.css
+++ b/css/basic.css
@@ -691,8 +691,8 @@ body {
 .card-started .profile .image img {
     position: relative;
     display: block;
-    width: 100%;
-    height: auto;
+    width: 146px;
+    height: 146px;
     border: 3px solid var(--black);
     border-radius: 100%;
     -moz-border-radius: 100%;
