--- a/css/basic.css
+++ b/css/basic.css
@@ -1500,6 +1500,32 @@ body {
 }
 
 
+/* CSS Document */
+#outerCircleText {
+    font-style: italic;
+    font-weight: bold;
+    font-family: 'comic sans ms', verdana, arial;
+    /* color: rgb(255, 0, 0); */
+    color: var(--text-theme);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3000;
+    cursor: default;
+}
+
+#outerCircleText div {
+    position: relative;
+}
+
+#outerCircleText div div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    text-align: center;
+}
+
+
 /* 
 .indicator {
     z-index: -1;
